[tool.poetry]
name = "flask-form"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_form"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-recaptcha = {git = "https://github.com/mardix/flask-recaptcha"}
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.23"
rich = "^13.3.5"
black = "^23.3.0"
loguru = "^0.7.0"
rope = "^1.8.0"
pylint = "^2.17.4"
pylsp-mypy = "^0.6.6"
pyls-isort = "^0.2.2"
pylsp-rope = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
